config/log/recobot.log
Traceback (most recent call last):
  File "bot.py", line 3, in <module>
    from FE import FE
  File "/Users/kk/recobot/FE.py", line 22
    print k, v
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(k, v)?
Traceback (most recent call last):
  File "bot.py", line 3, in <module>
    from FE import FE
  File "/Users/kk/recobot/FE.py", line 22
    print k, v
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(k, v)?
Traceback (most recent call last):
  File "bot.py", line 3, in <module>
    from FE import FE
  File "/Users/kk/recobot/FE.py", line 22
    print k, v
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(k, v)?
Traceback (most recent call last):
  File "bot.py", line 3, in <module>
    from FE import FE
  File "/Users/kk/recobot/FE.py", line 22
    print k, v
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(k, v)?
Traceback (most recent call last):
  File "bot.py", line 3, in <module>
    from FE import FE
  File "/Users/kk/recobot/FE.py", line 22
    print k, v
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(k, v)?
Traceback (most recent call last):
  File "bot.py", line 3, in <module>
    from FE import FE
  File "/Users/kk/recobot/FE.py", line 22
    print k, v
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(k, v)?
Traceback (most recent call last):
  File "bot.py", line 3, in <module>
    from FE import FE
  File "/Users/kk/recobot/FE.py", line 22
    print k, v
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(k, v)?
Traceback (most recent call last):
  File "bot.py", line 3, in <module>
    from FE import FE
  File "/Users/kk/recobot/FE.py", line 22
    print k, v
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(k, v)?
Traceback (most recent call last):
  File "bot.py", line 3, in <module>
    from FE import FE
  File "/Users/kk/recobot/FE.py", line 22
    print k, v
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(k, v)?
Traceback (most recent call last):
  File "bot.py", line 3, in <module>
    from FE import FE
  File "/Users/kk/recobot/FE.py", line 22
    print k, v
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(k, v)?
Traceback (most recent call last):
  File "bot.py", line 3, in <module>
    from FE import FE
  File "/Users/kk/recobot/FE.py", line 22
    print k, v
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(k, v)?
Traceback (most recent call last):
  File "bot.py", line 3, in <module>
    from FE import FE
  File "/Users/kk/recobot/FE.py", line 22
    print k, v
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(k, v)?
Traceback (most recent call last):
  File "bot.py", line 3, in <module>
    from FE import FE
  File "/Users/kk/recobot/FE.py", line 22
    print k, v
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(k, v)?
Traceback (most recent call last):
  File "bot.py", line 3, in <module>
    from FE import FE
  File "/Users/kk/recobot/FE.py", line 22
    print k, v
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(k, v)?
Traceback (most recent call last):
  File "bot.py", line 3, in <module>
    from FE import FE
  File "/Users/kk/recobot/FE.py", line 22
    print k, v
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(k, v)?
Traceback (most recent call last):
  File "bot.py", line 3, in <module>
    from FE import FE
  File "/Users/kk/recobot/FE.py", line 22
    print k, v
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(k, v)?
Traceback (most recent call last):
  File "bot.py", line 3, in <module>
    from FE import FE
  File "/Users/kk/recobot/FE.py", line 22
    print k, v
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(k, v)?
Traceback (most recent call last):
  File "bot.py", line 3, in <module>
    from FE import FE
  File "/Users/kk/recobot/FE.py", line 22
    print k, v
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(k, v)?
Traceback (most recent call last):
  File "bot.py", line 3, in <module>
    from FE import FE
  File "/Users/kk/recobot/FE.py", line 22
    print k, v
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(k, v)?
Traceback (most recent call last):
  File "bot.py", line 3, in <module>
    from FE import FE
  File "/Users/kk/recobot/FE.py", line 22
    print k, v
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(k, v)?
Traceback (most recent call last):
  File "bot.py", line 3, in <module>
    from FE import FE
  File "/Users/kk/recobot/FE.py", line 22
    print k, v
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(k, v)?
Traceback (most recent call last):
  File "bot.py", line 3, in <module>
    from FE import FE
  File "/Users/kk/recobot/FE.py", line 22
    print k, v
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(k, v)?
Traceback (most recent call last):
  File "bot.py", line 3, in <module>
    from FE import FE
  File "/Users/kk/recobot/FE.py", line 22
    print k, v
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(k, v)?
Traceback (most recent call last):
  File "bot.py", line 3, in <module>
    from FE import FE
  File "/Users/kk/recobot/FE.py", line 22
    print k, v
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(k, v)?
Traceback (most recent call last):
  File "bot.py", line 3, in <module>
    from FE import FE
  File "/Users/kk/recobot/FE.py", line 22
    print k, v
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(k, v)?
Traceback (most recent call last):
  File "bot.py", line 3, in <module>
    from FE import FE
  File "/Users/kk/recobot/FE.py", line 22
    print k, v
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(k, v)?
Traceback (most recent call last):
  File "bot.py", line 3, in <module>
    from FE import FE
  File "/Users/kk/recobot/FE.py", line 22
    print k, v
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(k, v)?
Traceback (most recent call last):
  File "bot.py", line 3, in <module>
    from FE import FE
  File "/Users/kk/recobot/FE.py", line 22
    print k, v
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(k, v)?
Traceback (most recent call last):
  File "bot.py", line 3, in <module>
    from FE import FE
  File "/Users/kk/recobot/FE.py", line 22
    print k, v
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(k, v)?
Traceback (most recent call last):
  File "bot.py", line 3, in <module>
    from FE import FE
  File "/Users/kk/recobot/FE.py", line 22
    print k, v
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(k, v)?
Traceback (most recent call last):
  File "bot.py", line 3, in <module>
    from FE import FE
  File "/Users/kk/recobot/FE.py", line 22
    print k, v
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(k, v)?
Traceback (most recent call last):
  File "bot.py", line 3, in <module>
    from FE import FE
  File "/Users/kk/recobot/FE.py", line 22
    print k, v
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(k, v)?
Traceback (most recent call last):
  File "bot.py", line 3, in <module>
    from FE import FE
  File "/Users/kk/recobot/FE.py", line 22
    print k, v
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(k, v)?
Traceback (most recent call last):
  File "bot.py", line 3, in <module>
    from FE import FE
  File "/Users/kk/recobot/FE.py", line 22
    print k, v
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(k, v)?
Traceback (most recent call last):
  File "bot.py", line 3, in <module>
    from FE import FE
  File "/Users/kk/recobot/FE.py", line 22
    print k, v
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(k, v)?
